# claw

./: .gitignore  Cargo.toml  LICENSE  Packager.toml  README.md  build.rs  release.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
assets/: claw.yaml
assets/goals/deduplicate/: prompt.yaml
assets/goals/example/: prompt.yaml
assets/goals/implement/: prompt.yaml
assets/goals/make_spec/: prompt.yaml
assets/goals/pr-notes/: prompt.yaml
assets/style-guides/: rust.md
prompts/: add_meta_prompt.txt  context_header.md
specs/assets_copy/: spec.md
specs/better_context/: primer.md  spec.md
specs/dry_run/: spec.md
specs/goal_params/: implementation_primer.md  spec.md
specs/stdin-context/: spec.md
specs/tui_work/: implementation-primer.md  interactive-goal-browser.md
src/: cli.rs  config.rs  context.rs  goal_browser.rs  help.rs  main.rs  runner.rs  validation.rs
src/commands/: add.rs  dry_run.rs  list.rs  mod.rs
tests/: dry_run_integration.rs
