[package]
name = "claw"
version = "0.1.0"
edition = "2024"
description = "A goal-driven, context-aware wrapper for Large Language Model (LLM) CLIs."
license = "MIT"

[dependencies]
# For robust command-line argument parsing, as specified.
# The "derive" feature enables the convenient derive macro for defining the CLI structure.
clap = { version = "4.5.4", features = ["derive"] }

# The specified templating engine for processing prompts.
tera = "1.19.1"

# For deserializing the prompt.yaml files into our Rust structs.
# The "derive" feature is essential for automatically generating deserialization logic.
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"

# For the interactive goal selection menu (`claw` with no arguments).
dialoguer = "0.11.0"

# To efficiently search upwards from the current directory for a `.claw` folder.
walkdir = "2.5.0"

# A robust, cross-platform way to find the user's home/config directory (`~/.config/`).
# This is crucial for locating the global configuration.
directories = "5.0.1"

# For ergonomic and idiomatic application-level error handling.
# This helps us provide clear error messages to the user.
anyhow = "1.0.82"
which = "8.0.0"
shlex = "1.3.0"
