[package]
name = "claw"
version = "0.3.2"
edition = "2024"
description = "A goal-driven, context-aware wrapper for Large Language Model (LLM) CLIs."
license = "MIT"
repository = "https://github.com/user/claw"

[package.metadata.dist]
assets = ["assets/"]

[dependencies]
# For robust command-line argument parsing
clap = { version = "4.5.4", features = ["derive"] }

# The specified templating engine for processing prompts.
tera = "1.19.1"

# For deserializing the prompt.yaml files into our Rust structs.
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"

# For the TUI goal browser
ratatui = "0.29.0"
crossterm = "0.28.1"

# To efficiently search upwards from the current directory for a `.claw` folder.
walkdir = "2.5.0"

# For respecting .gitignore patterns when discovering context files.
ignore = "0.4"

# For detecting binary vs text files.
content_inspector = "0.2"

# For generating tree visualizations of directory structures.
termtree = "0.5"

# A robust, cross-platform way to find the user's home/config directory (`~/.config/`).
directories = "5.0.1"

# For ergonomic and idiomatic application-level error handling.
# This helps us provide clear error messages to the user.
anyhow = "1.0.82"
which = "8.0.0"
shlex = "1.3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
